--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/leaflet": "^1.9.7",
+    "leaflet": "^1.9.4",
     "pocketbase": "^0.19.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
-    "tailwindcss": "^3.3.3",
     "vite": "^4.4.11"
   }
 }
